--- a/EstateManagementUI/appsettings.json
+++ b/EstateManagementUI/appsettings.json
@@ -1,9 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "AppSettings": {
+    "ClientId": "managementUIClient",
+    "ClientSecret": "d192cbc46d834d0da90e8a9d50ded543",
+    "IsIntegrationTest": false,
+    "DataReloadConfig": {
+      "DefaultInSeconds": 30
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
