--- a/EstateManagementUI/EstateManagementUI.csproj
+++ b/EstateManagementUI/EstateManagementUI.csproj
@@ -21,6 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="aspnetapp-root-cert.cer">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
