--- a/EstateManagementUI/appsettings.Development.json
+++ b/EstateManagementUI/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AppSettings": {
+    "Authority": "https://localhost:5001"
   }
 }
