View Estate functionally complete

--- a/EstateManagementUI/appsettings.Development.json
+++ b/EstateManagementUI/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AppSettings": {
-    "Authority": "https://localhost:5001"
-  }
+  //"AppSettings": {
+  //  "Authority": "https://localhost:5001"
+  //}
 }
