--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -24,4 +24,6 @@ jobs:
       run: |
         dotnet build EstateManagementUI.sln --configuration Release
 
-  
+    - name: Run Unit Tests
+      run: |        
+        dotnet test "EstateManagementUI.BusinessLogic.Tests\EstateManagementUI.BusinessLogic.Tests.csproj"  
