--- a/EstateManagementUI.Testing/EstateManagementUI.Testing.csproj
+++ b/EstateManagementUI.Testing/EstateManagementUI.Testing.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EstateManagmentUI.BusinessLogic\EstateManagementUI.BusinessLogic.csproj" />
+    <ProjectReference Include="..\EstateManagementUI.BusinessLogic\EstateManagementUI.BusinessLogic.csproj" />
   </ItemGroup>
 
   <ItemGroup>
