--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -80,4 +80,4 @@ jobs:
       if: ${{ failure() }}
       with:
         name: chrometracelogs
-        path: C:\\Users\\runneradmin\\txnproc\\trace\\
+        path: /home/txnproc/trace/   
