--- a/EstateManagementUI/Properties/launchSettings.json
+++ b/EstateManagementUI/Properties/launchSettings.json
@@ -1,54 +1,41 @@
-//{
-//  "profiles": {
-//    "http": {
-//      "commandName": "Project",
-//      "launchBrowser": true,
-//      "environmentVariables": {
-//        "ASPNETCORE_ENVIRONMENT": "Development"
-//      },
-//      "dotnetRunMessages": true,
-//      "applicationUrl": "http://localhost:5274"
-//    },
-//    "https": {
-//      "commandName": "Project",
-//      "launchBrowser": true,
-//      "environmentVariables": {
-//        "ASPNETCORE_ENVIRONMENT": "Development"
-//      },
-//      "dotnetRunMessages": true,
-//      "applicationUrl": "https://localhost:7107;http://localhost:5274"
-//    },
-//    "IIS Express": {
-//      "commandName": "IISExpress",
-//      "launchBrowser": true,
-//      "environmentVariables": {
-//        "ASPNETCORE_ENVIRONMENT": "Development"
-//      }
-//    },
-//    "Container (Dockerfile)": {
-//      "commandName": "Docker",
-//      "launchBrowser": true,
-//      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-//      "environmentVariables": {
-//        "ASPNETCORE_HTTPS_PORTS": "8081",
-//        "ASPNETCORE_HTTP_PORTS": "8080"
-//      },
-//      "publishAllPorts": true,
-//      "useSSL": true
-//    }
-//  },
-//  "$schema": "http://json.schemastore.org/launchsettings.json",
-//  "iisSettings": {
-//    "windowsAuthentication": false,
-//    "anonymousAuthentication": true,
-//    "iisExpress": {
-//      "applicationUrl": "http://localhost:19508",
-//      "sslPort": 44364
-//    }
-//  }
-//}
 {
   "profiles": {
+    "http": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5274"
+    },
+    "https": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7107;http://localhost:5274"
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Container (Dockerfile)": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "ASPNETCORE_HTTPS_PORTS": "8081",
+        "ASPNETCORE_HTTP_PORTS": "8080"
+      },
+      "publishAllPorts": true,
+      "useSSL": true
+    },
     "EstateAdministrationUI": {
       "commandName": "Project",
       "launchBrowser": true,
@@ -59,6 +46,15 @@
       "dotnetRunMessages": true,
       "applicationUrl": "https://192.168.1.86:5004",
       "jsWebView2Debugging": true
+    }
+  },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:19508",
+      "sslPort": 44364
     }
   }
 }
