--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -74,7 +74,7 @@ jobs:
       env:
         Browser: Chrome
         IsCI: true
-      run: dotnet test "EstateManagementUI.IntegrationTests\EstateManagementUI.IntegrationTests.csproj" filter Category=PRTest
+      run: dotnet test "EstateManagementUI.IntegrationTests\EstateManagementUI.IntegrationTests.csproj" --filter Category=PRTest
       
     - uses: actions/upload-artifact@v2
       if: ${{ failure() }}
