wip permisison management screens

--- a/EstateManagementUI/EstateManagementUI.csproj
+++ b/EstateManagementUI/EstateManagementUI.csproj
@@ -49,4 +49,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\PermissionManagement\Roles\Components\" />
+  </ItemGroup>
+
 </Project>
