--- a/EstateManagementUI.BusinessLogic/EstateManagementUI.BusinessLogic.csproj
+++ b/EstateManagementUI.BusinessLogic/EstateManagementUI.BusinessLogic.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MediatR" Version="12.3.0" />
     <PackageReference Include="Shared" Version="2024.7.2" />
     <PackageReference Include="SimpleResults" Version="3.0.0" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
   </ItemGroup>
 
 </Project>
