permission management added

--- a/EstateManagementUI/appsettings.json
+++ b/EstateManagementUI/appsettings.json
@@ -3,6 +3,7 @@
     "ClientId": "managementUIClient",
     "ClientSecret": "d192cbc46d834d0da90e8a9d50ded543",
     "IsIntegrationTest": false,
+    "PermissionKey": null,
     "DataReloadConfig": {
       "DefaultInSeconds": 30
     }
