--- a/EstateManagementUI/appsettings.json
+++ b/EstateManagementUI/appsettings.json
@@ -6,6 +6,7 @@
     "PermissionKey": null,
     "DataReloadConfig": {
       "DefaultInSeconds": 30
-    }
+    },
+    "HttpClientIgnoreCertificateErrors": false
   }
 }
