--- a/EstateManagementUI.BusinessLogic/EstateManagementUI.BusinessLogic.csproj
+++ b/EstateManagementUI.BusinessLogic/EstateManagementUI.BusinessLogic.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="EstateManagement.Client" Version="2024.7.1" />
+    <PackageReference Include="FileProcessor.Client" Version="2024.8.1" />
     <PackageReference Include="MediatR" Version="12.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
