--- a/EstateManagementUI.BusinessLogic/EstateManagementUI.BusinessLogic.csproj
+++ b/EstateManagementUI.BusinessLogic/EstateManagementUI.BusinessLogic.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Shared" Version="2024.7.2" />
     <PackageReference Include="SimpleResults" Version="3.0.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
+    <PackageReference Include="EstateReportingAPI.Client" Version="2024.7.1" />
   </ItemGroup>
 
 </Project>
