--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -124,7 +124,7 @@ jobs:
     - name: Restore Nuget Packages
       run: dotnet restore EstateManagementUI.sln --source ${{ secrets.PUBLICFEEDURL }} --source ${{ secrets.PRIVATEFEED_URL }}
 
-    - name: Run Integration Tests (Chrome)
+    - name: Run Integration Tests (Edge)
       env:
         Browser: Edge
         IsCI: true
@@ -133,5 +133,59 @@ jobs:
     - uses: actions/upload-artifact@v4.4.0
       if: ${{ failure() }}
       with:
-        name: chrometracelogs
+        name: edgetracelogs
+        path: /home/txnproc/trace/   
+
+  fireefoxtests:
+    name: "Build and Test UI - Firefox"
+    env:
+        ASPNETCORE_ENVIRONMENT: "Production"
+        NODE_VERSION: '14.x'                # set this to the node version to use
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2.3.4
+
+    - name: Trust Certificate
+      run: |
+        sudo apt-get install expect
+        certPath="$GITHUB_WORKSPACE/Certificates/aspnetapp-root-cert.pfx"
+        password="password"
+
+        # Use expect to automate the passphrase input
+        expect -c "
+        spawn openssl pkcs12 -in \"$certPath\" -clcerts -nokeys -out certificate.crt -password pass:\"$password\"
+        expect \"Enter Import Password:\" { send \"$password\n\" }
+        expect eof
+        "
+
+        expect -c "
+        spawn openssl pkcs12 -in \"$certPath\" -nocerts -out private.key -password pass:\"$password\"
+        expect \"Enter Import Password:\" { send \"$password\n\" }
+        expect eof
+        "
+
+        sudo cp certificate.crt /usr/local/share/ca-certificates/aspnetapp-root-cert.crt
+        sudo update-ca-certificates
+
+        sudo cp private.key /etc/ssl/private/aspnetapp-root-cert.key
+        sudo chmod 400 /etc/ssl/private/aspnetapp-root-cert.key    
+            
+    - name: Build Docker Image
+      run: docker build . --file EstateManagementUI/Dockerfile --tag estatemanagementui:latest
+
+    - name: Restore Nuget Packages
+      run: dotnet restore EstateManagementUI.sln --source ${{ secrets.PUBLICFEEDURL }} --source ${{ secrets.PRIVATEFEED_URL }}
+
+    - name: Run Integration Tests (Firefox)
+      env:
+        Browser: Firefox
+        IsCI: true
+      run: dotnet test "EstateManagementUI.IntegrationTests\EstateManagementUI.IntegrationTests.csproj" --filter Category=PRTest
+      
+    - uses: actions/upload-artifact@v4.4.0
+      if: ${{ failure() }}
+      with:
+        name: firefoxtracelogs
         path: /home/txnproc/trace/   
