transaction analysis dashboard added

--- a/EstateManagementUI/EstateManagementUI.csproj
+++ b/EstateManagementUI/EstateManagementUI.csproj
@@ -33,6 +33,10 @@
     <Content Update="appsettings.Development.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Update="Pages\Reporting\_SubNavigation.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
