adding permissions enforcement for tests

--- a/EstateManagementUI.IntegrationTests/EstateManagementUI.IntegrationTests.csproj
+++ b/EstateManagementUI.IntegrationTests/EstateManagementUI.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,6 +8,18 @@
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="nlog.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
 	  <PackageReference Include="coverlet.collector" Version="6.0.2">
@@ -34,6 +46,11 @@
 	  <PackageReference Include="EstateManagement.IntegrationTesting.Helpers" Version="2024.7.1" />
 
 	  <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2024.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EstateManagementUI.BusinessLogic\EstateManagementUI.BusinessLogic.csproj" />
+    <ProjectReference Include="..\EstateManagementUI\EstateManagementUI.csproj" />
   </ItemGroup>
 
 </Project>
