--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -212,6 +212,7 @@ jobs:
         dotnet test "EstateManagementUI.BusinessLogic.Tests\EstateManagementUI.BusinessLogic.Tests.csproj" /p:CollectCoverage=true /p:Exclude="[xunit*]*" /p:ExcludeByAttribute="Obsolete" /p:ExcludeByAttribute="GeneratedCodeAttribute" /p:ExcludeByAttribute="CompilerGeneratedAttribute" /p:ExcludeByAttribute="ExcludeFromCodeCoverageAttribute" /p:CoverletOutput="../lcov1.info" /maxcpucount:1 /p:CoverletOutputFormat="lcov"
     
     - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v3  
+      uses: codecov/codecov-action@v4 
       with:
-        files: ./lcov1.info
+          token: ${{ secrets.CODECOV_TOKEN }} 
+          files: ./lcov1.info
