--- a/EstateManagementUI.IntegrationTests/EstateManagementUI.IntegrationTests.csproj
+++ b/EstateManagementUI.IntegrationTests/EstateManagementUI.IntegrationTests.csproj
@@ -26,8 +26,8 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
-	  <PackageReference Include="EstateManagement.Client" Version="2024.7.1" />
-	  <PackageReference Include="EstateManagement.Database" Version="2024.7.1" />
+	  <PackageReference Include="EstateManagement.Client" Version="2024.8.2-build126" />
+	  <PackageReference Include="EstateManagement.Database" Version="2024.8.2-build126" />
 	  <PackageReference Include="SecurityService.Client" Version="2024.7.1" />
 	  <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2024.7.1" />
 	  <PackageReference Include="Shouldly" Version="4.2.1" />
@@ -37,15 +37,15 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="Reqnroll" Version="2.0.3" />
     <PackageReference Include="Reqnroll.NUnit" Version="2.0.3" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="2024.7.2" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="2024.11.2" />
 	  <PackageReference Include="Selenium.Support" Version="4.23.0" />
 	  <PackageReference Include="Selenium.WebDriver" Version="4.23.0" />
 
 	  <PackageReference Include="MessagingService.IntegrationTesting.Helpers" Version="2024.4.2" />
 
-	  <PackageReference Include="EstateManagement.IntegrationTesting.Helpers" Version="2024.7.1" />
+	  <PackageReference Include="EstateManagement.IntegrationTesting.Helpers" Version="2024.8.2-build126" />
 
-	  <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2024.7.1" />
+	  <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2024.8.2-build118" />
   </ItemGroup>
 
   <ItemGroup>
