--- a/EstateManagementUI.IntegrationTests/EstateManagementUI.IntegrationTests.csproj
+++ b/EstateManagementUI.IntegrationTests/EstateManagementUI.IntegrationTests.csproj
@@ -26,10 +26,10 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
-	  <PackageReference Include="EstateManagement.Client" Version="2024.8.2-build126" />
-	  <PackageReference Include="EstateManagement.Database" Version="2024.8.2-build126" />
-	  <PackageReference Include="SecurityService.Client" Version="2024.7.1" />
-	  <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2024.7.1" />
+	  <PackageReference Include="EstateManagement.Client" Version="2024.8.2-build128" />
+	  <PackageReference Include="EstateManagement.Database" Version="2024.8.2-build128" />
+	  <PackageReference Include="SecurityService.Client" Version="2024.88.2-build73" />
+	  <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2024.88.2-build73" />
 	  <PackageReference Include="Shouldly" Version="4.2.1" />
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
 	  <PackageReference Include="Reqnroll.Tools.MsBuild.Generation" Version="2.0.3" />
@@ -37,15 +37,15 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="Reqnroll" Version="2.0.3" />
     <PackageReference Include="Reqnroll.NUnit" Version="2.0.3" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="2024.11.2" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="2024.11.4" />
 	  <PackageReference Include="Selenium.Support" Version="4.23.0" />
 	  <PackageReference Include="Selenium.WebDriver" Version="4.23.0" />
 
-	  <PackageReference Include="MessagingService.IntegrationTesting.Helpers" Version="2024.4.2" />
+	  <PackageReference Include="MessagingService.IntegrationTesting.Helpers" Version="2024.8.2-build65" />
 
-	  <PackageReference Include="EstateManagement.IntegrationTesting.Helpers" Version="2024.8.2-build126" />
+	  <PackageReference Include="EstateManagement.IntegrationTesting.Helpers" Version="2024.8.2-build128" />
 
-	  <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2024.8.2-build118" />
+	  <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2024.8.2-build119" />
   </ItemGroup>
 
   <ItemGroup>
