Enhance testing and improve code quality
Updated CI configurations to include unit test commands for coverage reports. Modified project files for detailed debugging and added new dependencies. Expanded test data models and improved test coverage across various components. Enhanced UI and business logic files for better user experience and functionality. Added new tests for reporting and list interactions.

--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Run Unit Tests
       run: |        
         dotnet test "EstateManagementUI.BusinessLogic.Tests\EstateManagementUI.BusinessLogic.Tests.csproj"  
+        dotnet test "EstateManagementUI.UITests\EstateManagementUI.UITests.csproj"  
 
   chrometests:
     name: "Build and Test UI - Chrome"
