--- a/EstateManagementUI.Testing/EstateManagementUI.Testing.csproj
+++ b/EstateManagementUI.Testing/EstateManagementUI.Testing.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EstateManagementUI.BusinessLogic\EstateManagementUI.BusinessLogic.csproj" />
+    <ProjectReference Include="..\EstateManagementUI.ViewModels\EstateManagementUI.ViewModels.csproj" />
   </ItemGroup>
 
   <ItemGroup>
