--- a/EstateManagementUI.BusinessLogic/EstateManagementUI.BusinessLogic.csproj
+++ b/EstateManagementUI.BusinessLogic/EstateManagementUI.BusinessLogic.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EstateManagement.Client" Version="2024.8.2-build128" />
     <PackageReference Include="FileProcessor.Client" Version="2024.8.2-build69" />
     <PackageReference Include="MediatR" Version="12.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.7" />
@@ -19,6 +18,7 @@
     <PackageReference Include="SimpleResults" Version="3.0.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
     <PackageReference Include="EstateReportingAPI.Client" Version="2024.7.1" />
+    <PackageReference Include="TransactionProcessor.Client" Version="2025.1.5-build147" />
   </ItemGroup>
 
 </Project>
