Add GetRequiredProjections method and update dependencies
Updated `DockerHelper.cs` to include a new method `GetRequiredProjections` that returns a list of required projection scripts, adding five specific JavaScript files.

Also added a new package reference for `EventStoreProjections` version `2023.12.3` in `EstateManagementUI.IntegrationTests.csproj` to enhance event store projection capabilities.

--- a/EstateManagementUI.IntegrationTests/EstateManagementUI.IntegrationTests.csproj
+++ b/EstateManagementUI.IntegrationTests/EstateManagementUI.IntegrationTests.csproj
@@ -26,6 +26,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
+	  <PackageReference Include="EventStoreProjections" Version="2023.12.3" />
 	  <PackageReference Include="SecurityService.Client" Version="2024.88.2-build73" />
 	  <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2024.88.2-build73" />
 	  <PackageReference Include="Shouldly" Version="4.2.1" />
