--- a/EstateManagementUI.IntegrationTests/EstateManagementUI.IntegrationTests.csproj
+++ b/EstateManagementUI.IntegrationTests/EstateManagementUI.IntegrationTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -27,29 +27,29 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
 	  <PackageReference Include="EventStoreProjections" Version="2023.12.3" />
-	  <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.14" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.14" />
-	  <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="8.0.1" />
-	  <PackageReference Include="SecurityService.Client" Version="2025.1.1" />
-	  <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2025.1.1" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.5" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.5" />
+	  <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.5" />
+	  <PackageReference Include="SecurityService.Client" Version="2025.5.2-build82" />
+	  <PackageReference Include="SecurityService.IntegrationTesting.Helpers" Version="2025.5.2-build82" />
 	  <PackageReference Include="Shouldly" Version="4.3.0" />
-	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
-	  <PackageReference Include="Reqnroll.Tools.MsBuild.Generation" Version="2.4.0" />
+	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+	  <PackageReference Include="Reqnroll.Tools.MsBuild.Generation" Version="2.4.1" />
 		<PackageReference Include="NUnit" Version="4.3.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
-    <PackageReference Include="Reqnroll" Version="2.4.0" />
-    <PackageReference Include="Reqnroll.NUnit" Version="2.4.0" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="2025.3.1" />
-	  <PackageReference Include="Selenium.Support" Version="4.29.0" />
-	  <PackageReference Include="Selenium.WebDriver" Version="4.29.0" />
+    <PackageReference Include="Reqnroll" Version="2.4.1" />
+    <PackageReference Include="Reqnroll.NUnit" Version="2.4.1" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="2025.6.2" />
+	  <PackageReference Include="Selenium.Support" Version="4.33.0" />
+	  <PackageReference Include="Selenium.WebDriver" Version="4.33.0" />
 
-	  <PackageReference Include="MessagingService.IntegrationTesting.Helpers" Version="2025.1.4" />
+	  <PackageReference Include="MessagingService.IntegrationTesting.Helpers" Version="2025.3.2-build77" />
 
-	  <PackageReference Include="TransactionProcessor.Client" Version="2025.2.10" />
+	  <PackageReference Include="TransactionProcessor.Client" Version="2025.5.2-build186" />
 
-	  <PackageReference Include="TransactionProcessor.Database" Version="2025.2.10" />
+	  <PackageReference Include="TransactionProcessor.Database" Version="2025.5.2-build186" />
 
-	  <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2025.2.10" />
+	  <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2025.5.2-build186" />
   </ItemGroup>
 
   <ItemGroup>
