--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -45,6 +45,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2.3.4
 
+    - name: Install NET 9
+      uses: actions/setup-dotnet@v4.0.1
+      with:
+        dotnet-version: '9.0.x'
+
     - name: Trust Certificate
       run: |
         sudo apt-get install expect
@@ -99,6 +104,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2.3.4
 
+    - name: Install NET 9
+      uses: actions/setup-dotnet@v4.0.1
+      with:
+        dotnet-version: '9.0.x'
+
     - name: Trust Certificate
       run: |
         sudo apt-get install expect
@@ -152,6 +162,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2.3.4
+
+    - name: Install NET 9
+      uses: actions/setup-dotnet@v4.0.1
+      with:
+        dotnet-version: '9.0.x'
 
     - name: Trust Certificate
       run: |
