--- a/EstateManagementUI/EstateManagementUI.csproj
+++ b/EstateManagementUI/EstateManagementUI.csproj
@@ -34,7 +34,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hydro" Version="1.2.0" />
+	  <PackageReference Include="AspNetCore.HealthChecks.UI" Version="9.0.0" />
+	  <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0" />
+	  <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="9.0.0" />
+	  <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="9.0.0" />
+
+	  <PackageReference Include="Hydro" Version="1.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.2" />
     <PackageReference Include="Lamar" Version="15.0.0" />
