--- a/EstateManagementUI/appsettings.json
+++ b/EstateManagementUI/appsettings.json
@@ -2,6 +2,8 @@
   "AppSettings": {
     "ClientId": "managementUIClient",
     "ClientSecret": "d192cbc46d834d0da90e8a9d50ded543",
+    "BackEndClientId": "serviceClient",
+    "BackEndClientSecret": "d192cbc46d834d0da90e8a9d50ded543",
     "IsIntegrationTest": false,
     "PermissionKey": null,
     "DataReloadConfig": {
