--- a/EstateManagementUI.BlazorServer/appsettings.json
+++ b/EstateManagementUI.BlazorServer/appsettings.json
@@ -10,7 +10,7 @@
     "SecurityServiceLocalPort": null,
     "SecurityServicePort": null,
     "HttpClientIgnoreCertificateErrors": false,
-    "TestMode": false
+    "TestMode": true
   },
   "Authentication": {
     "Authority": "https://localhost:5001",
