--- a/EstateManagementUI.BlazorIntegrationTests/appsettings.json
+++ b/EstateManagementUI.BlazorIntegrationTests/appsettings.json
@@ -1,6 +1,6 @@
 {
   "TestSettings": {
-    "SkipRemoteCalls": false,
-    "EnableTestMode": false
+    "SkipRemoteCalls": true,
+    "EnableTestMode": true
   }
 }
