Refactor TestMode to enum, update config and services
Refactored TestMode from boolean to enum for granular control of test behaviors. Updated appsettings.json and authentication client details. Adjusted Program.cs to use the new enum for service registration, authentication, and endpoint mapping. Updated RoleSwitcher.razor to use TestMode enum logic. Removed Counter.razor and its tests. Added TestMode enum definition.

--- a/EstateManagementUI.BlazorServer/appsettings.json
+++ b/EstateManagementUI.BlazorServer/appsettings.json
@@ -9,13 +9,13 @@
   "AppSettings": {
     "SecurityServiceLocalPort": null,
     "SecurityServicePort": null,
-    "HttpClientIgnoreCertificateErrors": false,
-    "TestMode": true
+    "HttpClientIgnoreCertificateErrors": false,    
+    "TestMode": "BackedByTestDataStore"
   },
   "Authentication": {
     "Authority": "https://localhost:5001",
-    "ClientId": "estateUIClient",
-    "ClientSecret": "Secret1",
+    "ClientId": "managementUIClient",
+    "ClientSecret": "d192cbc46d834d0da90e8a9d50ded543",
     "CallbackPath": "/signin-oidc",
     "ResponseType": "code id_token",
     "Scopes": [
