--- a/EstateManagementUI.BlazorServer/appsettings.json
+++ b/EstateManagementUI.BlazorServer/appsettings.json
@@ -9,8 +9,12 @@
   "AppSettings": {
     "SecurityServiceLocalPort": null,
     "SecurityServicePort": null,
-    "HttpClientIgnoreCertificateErrors": false,    
-    "TestMode": "BackedByTestDataStore"
+    "HttpClientIgnoreCertificateErrors": false,
+    "TestMode": "Disabled",
+    "TransactionProcessorApi": "http://127.0.0.1:5002",
+    "EstateReportingApi": "http://127.0.0.1:5011",
+    "FileProcessorApi": "http://127.0.0.1:5009",
+    "SecurityService": "https://127.0.0.1:5001"
   },
   "Authentication": {
     "Authority": "https://localhost:5001",
